--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Demo_project",
+  "name": "demo-project",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,17 +11,20 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
-    "bootstrap": "^5.2.2",
-    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.7.13",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.1",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.3"
+    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/vuetify": "^1.12.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1"
   }
 }
